fix prod for now

--- a/.github/workflows/build-teedy-backend.yml
+++ b/.github/workflows/build-teedy-backend.yml
@@ -84,9 +84,7 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no $SSH_USER@$SERVER_HOST "\
             cd $PROJECT_PATH && \
-            git pull && \
-            php artisan migrate && \
-            npm run build"
+            git pull"
 
   notify:
     needs: build
