--- a/.github/workflows/build-wordpress-ai-review.yml
+++ b/.github/workflows/build-wordpress-ai-review.yml
@@ -117,11 +117,13 @@ jobs:
         id: ai
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        shell: /usr/bin/bash -e {0}
+        shell: bash
         run: |
+          DECODED_DIFF=$(echo "${{ steps.diff.outputs.diff_b64 }}" | base64 -d)
+
           PAYLOAD=$(jq -n --arg title "${{ steps.data.outputs.title }}" \
                           --arg desc "${{ steps.data.outputs.description }}" \
-                          --arg diff "$(echo "${{ steps.diff.outputs.diff_b64 }}" | base64 -d)" \
+                          --arg diff "$DECODED_DIFF" \
                           '{
                             model: "gpt-4-0125-preview",
                             messages: [
@@ -135,23 +137,25 @@ jobs:
                               }
                             ],
                             temperature: 0.3
-                          }')
+                    }')
 
-          RESPONSE=$(curl https://api.openai.com/v1/chat/completions \
-            -s -H "Authorization: Bearer $OPENAI_API_KEY" \
-            -H "Content-Type: application/json" \
-            -d "$PAYLOAD")
+            RESPONSE=$(curl https://api.openai.com/v1/chat/completions \
+              -s -H "Authorization: Bearer $OPENAI_API_KEY" \
+              -H "Content-Type: application/json" \
+              -d "$PAYLOAD")
 
-          PR_REVIEW=$(echo "$RESPONSE" | jq -r '.choices[0].message.content // "Aucune réponse reçue de l'IA."')
-          echo "pr_review=$PR_REVIEW" >> $GITHUB_OUTPUT
+            PR_REVIEW=$(echo "$RESPONSE" | jq -r '.choices[0].message.content // "Aucune réponse reçue de l'IA."')
+            echo "pr_review=$PR_REVIEW" >> $GITHUB_OUTPUT
 
       - name: Run code review
         id: code_review
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        shell: /usr/bin/bash -e {0}
+        shell: bash
         run: |
-          PAYLOAD=$(jq -n --arg diff "$(echo "${{ steps.diff.outputs.diff_b64 }}" | base64 -d)" \
+          DECODED_DIFF=$(echo "${{ steps.diff.outputs.diff_b64 }}" | base64 -d)
+
+          PAYLOAD=$(jq -n --arg diff "$DECODED_DIFF" \
                           '{
                             model: "gpt-4-0125-preview",
                             messages: [
@@ -180,11 +184,13 @@ jobs:
         if: success()
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        shell: /usr/bin/bash -e {0}
+        shell: bash
         run: |
+          DECODED_DIFF=$(echo "${{ steps.diff.outputs.diff_b64 }}" | base64 -d)
+
           PAYLOAD=$(jq -n --arg title "${{ steps.data.outputs.title }}" \
                           --arg desc "${{ steps.data.outputs.description }}" \
-                          --arg diff "$(echo "${{ steps.diff.outputs.diff_b64 }}" | base64 -d)" \
+                          --arg diff "$DECODED_DIFF" \
                           '{
                             model: "gpt-4-0125-preview",
                             messages: [
